syntax = "proto3";

message GeneralInformation {
    uint64 average_document_length = 1;     // avg.d.l.
    uint64 total_documents_length = 2;      // N
    uint64 k1_coefficient = 3;              // k_1 coefficient
    uint64 b_coefficient = 4;               // b coefficient
}

message DocumentId {
    message DocumentData {
        string document_name = 1;
        uint64 document_length = 2;
    }

    map<uint64, DocumentData> doc_id = 1;   // map<uint64_t, pair<string, uint64_t>>
}                                           //      did             name    length

message InvertedIndex {
    message DocsList {
        message InfoPair {
            uint64 doc_id = 1;
            uint64 word_occurrence_count = 2;
        }

        repeated InfoPair docs_vector = 1;
    }

    map<string, DocsList> index = 1;
}
